Correct margin-top on sidebar spacing

--- a/style.css
+++ b/style.css
@@ -284,7 +284,7 @@ header input {
 }
 
 .sidebar .nav > li:nth-child(7) {
-    margin-top: 90px;
+    margin-top: 80px;
 }
 
 .sidebar .nav li p {
